ReWrite: Fix Publish Logo Alignment Issue

--- a/SCSS/Theme Rewrite/custom-css/publish/_publish-fixes.scss
+++ b/SCSS/Theme Rewrite/custom-css/publish/_publish-fixes.scss
@@ -20,7 +20,7 @@ body.theme-dark {
     }
     //Center Image
     .site-body-left-column-site-logo {
-        margin: auto;
+        margin: 0 auto;
         display: block;
     }
 
